--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "http://ricardomachado.net"
 #
 # NB! Without this *nothing* will work, because it's used in every path :)
 
-#baseurl: /
+baseurl: ricardomachado.net
 
 # Google tracking id to track your visitors
 
