--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # NB! Set your site's url, otherwise stuff will break :)
 
-url: "http://ricardomachado.net"
+url: "http://rjfmachado.github.io"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (https://yourusername.github.io/repository-name)
@@ -12,7 +12,7 @@ url: "http://ricardomachado.net"
 #
 # NB! Without this *nothing* will work, because it's used in every path :)
 
-baseurl: ricardomachado.net
+baseurl: rjfmachado.github.io
 
 # Google tracking id to track your visitors
 
