--- a/_config.yml
+++ b/_config.yml
@@ -167,7 +167,7 @@ social:
 
 pages_list:
   About: 'about'
-  Blog: 'latest-post'
+  #Blog: 'latest-post'
   #Timeline: 'timeline'
   Contact: 'contact'
 
