--- a/_config.yml
+++ b/_config.yml
@@ -148,6 +148,8 @@ social:
     url: "https://twitter.com/rjfmachado"
   - title: "github"
     url: "https://github.com/rjfmachado"
+  - title: "linkedin"
+    url: "https://pt.linkedin.com/in/rjfmachado"
 #  - title: "bitcoin"
 #    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
   - title: "rss"
