Remove RSS feed

--- a/_config.yml
+++ b/_config.yml
@@ -152,8 +152,8 @@ social:
     url: "https://pt.linkedin.com/in/rjfmachado"
 #  - title: "bitcoin"
 #    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
-  - title: "rss"
-    url: "/feed.xml"
+#  - title: "rss"
+#    url: "/feed.xml"
 
 ############
 # 404 page #
