--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ favicon: "/img/favicon.ico"
 
 black-favicon: "/img/black-lab-glass.ico"
 
-background-img: "../img/photo-1465066989788-372fcdde2f2c.png"
+background-img: "../img/photo-1465066989788-372fcdde2f2c.jpg"
 
 ##############################
 # Dynamic Text on the Header #
