--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ syntax-highlight: True
 # Contact #
 ###########
 
-#email: "your@email.here"
+email: "rjfmachado@gmail.com"
 
 ################
 # Author Blurb #
