--- a/_config.yml
+++ b/_config.yml
@@ -104,6 +104,8 @@ disqus-shortname: "ricardomachadonet"
 
 syntax-highlight: True
 
+excerpt_separator: ""
+
 ############
 # Timeline #
 ############
