--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,7 @@ pages_list:
   About: 'about'
   Blog: 'latest-post'
   #Timeline: 'timeline'
+  Contributions: 'contributions'
   Contact: 'contact'
 
 # Exclusion list from the generated _site
