--- a/_config.yml
+++ b/_config.yml
@@ -150,8 +150,8 @@ social:
     url: "https://github.com/rjfmachado"
   - title: "linkedin"
     url: "https://pt.linkedin.com/in/rjfmachado"
-  - title: "feedly"
-    url: "http://cloud.feedly.com/#subscription/feed/http://ricardomachado.net/feed.xml"
+# - title: "feedly"
+#    url: "http://cloud.feedly.com/#subscription/feed/http://ricardomachado.net/feed.xml"
 #  - title: "bitcoin"
 #    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
   - title: "rss"
