--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ favicon: "/img/favicon.ico"
 
 black-favicon: ""
 
-background-img: "../img/photo-1465066989788-372fcdde2f2c-resize.jpg"
+background-img: "/img/photo-1465066989788-372fcdde2f2c-resize.jpg"
 
 ##############################
 # Dynamic Text on the Header #
@@ -86,6 +86,8 @@ icon-192p: "/img/web-app/icon-192p.png"
 ########
 
 post-preview-words: 96
+
+excerpt_separator: ""
 
 paginate: 5
 
